added device libraries to correct path

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external_modules/micropython_mqtt_as"]
 	path = external_modules/micropython_mqtt_as
 	url = https://github.com/kevinkk525/micropython-mqtt
+[submodule "pysmartnode/libraries"]
+	path = pysmartnode/libraries
+	url = https://github.com/kevinkk525/micropython-device-libraries
